--- a/src/Components/style/Header.css
+++ b/src/Components/style/Header.css
@@ -54,6 +54,11 @@ header .nav-item a:hover {
   color: #009999;
 }
 
+
+.navbar-toggler-icon {
+  color: #fff !important;
+}
+
 /* tablet ver */
 
 @media (max-width: 991.98px) {
