--- a/src/Components/style/Services.css
+++ b/src/Components/style/Services.css
@@ -16,6 +16,7 @@
   line-height: 36px;
   color: #4e4e4e;
   margin-top: 24px;
+  margin-bottom: 54px;
 }
 
 .line-1::after {
@@ -46,18 +47,112 @@
 /* content card */
 
 .services-card-wraper {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .services-card {
-  width: 459px;
-  height: 341px;
+  width: 359px;
+  height: 291px;
   background: #ffffff;
   box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.06);
   border-radius: 24px;
   padding: 47px 32px;
   margin: 20px;
+}
+
+.services-icon {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #e5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.services-card-title h1 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  margin-top: 20px;
+}
+
+.services-card-title p {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 28px;
+  color: #4e4e4e;
+}
+
+/* tablet ver */
+
+@media (max-width: 991.98px) {
+  .services-card {
+    width: 754px;
+    height: 461px;
+    background: #ffffff;
+    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.06);
+    border-radius: 24px;
+    padding: 47px 32px;
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .services-icon {
+    width: 182px;
+    height: 182px;
+    border-radius: 50%;
+    background-color: #e5f5f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .services-card-title {
+    width: 50%;
+    margin-left: 40px;
+  }
+}
+
+/* mobile ver */
+
+@media (max-width: 767.98px) {
+  .services-card {
+    width: 359px;
+    height: 291px;
+    background: #ffffff;
+    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.06);
+    border-radius: 24px;
+    padding: 27px 32px;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .services-icon {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #e5f5f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+  }
+
+  .services-card-title {
+    width: 100%;
+    margin-left: 0;
+  }
 }
