--- a/src/Components/style/Services.css
+++ b/src/Components/style/Services.css
@@ -73,6 +73,11 @@
   align-items: center;
 }
 
+.services-icon img {
+  height: 32px;
+  width: 32px;
+}
+
 .services-card-title h1 {
   font-family: "Poppins";
   font-style: normal;
@@ -94,9 +99,30 @@
 /* tablet ver */
 
 @media (max-width: 991.98px) {
+  .services-title h1 {
+    text-align: center;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 52px;
+    line-height: 78px;
+  }
+
+  .services-title p {
+    text-align: center;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    color: #4e4e4e;
+    margin-top: 24px;
+    margin-bottom: 54px;
+  }
+
   .services-card {
     width: 754px;
-    height: 461px;
+    height: 301px;
     background: #ffffff;
     box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.06);
     border-radius: 24px;
@@ -106,6 +132,11 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+  }
+
+  .services-icon img {
+    height: 82px;
+    width: 82px;
   }
 
   .services-icon {
@@ -122,14 +153,52 @@
     width: 50%;
     margin-left: 40px;
   }
+
+  .services-card-title h1 {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 48px;
+    margin-top: 20px;
+  }
+
+  .services-card-title p {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 38px;
+    color: #4e4e4e;
+  }
 }
 
 /* mobile ver */
 
 @media (max-width: 767.98px) {
+  .services-title h1 {
+    text-align: center;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 48px;
+  }
+
+  .services-title p {
+    text-align: center;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #4e4e4e;
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
   .services-card {
-    width: 359px;
-    height: 291px;
+    width: 335px;
+    height: 382px;
     background: #ffffff;
     box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.06);
     border-radius: 24px;
@@ -141,8 +210,8 @@
   }
 
   .services-icon {
-    width: 60px;
-    height: 60px;
+    width: 82px;
+    height: 82px;
     border-radius: 50%;
     background-color: #e5f5f5;
     display: flex;
@@ -154,5 +223,28 @@
   .services-card-title {
     width: 100%;
     margin-left: 0;
+  }
+
+  .services-icon img {
+    height: 36px;
+    width: 36px;
+  }
+
+  .services-card-title h1 {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    margin-top: 20px;
+  }
+
+  .services-card-title p {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 32px;
+    color: #4e4e4e;
   }
 }
